Version Final SmartMarket